<resources>
    <string name="app_name">NDHFOS</string>

    <string name="error_fetching_restaurants">An error occurred while trying to fetch data!\n
        Try again after some time!</string>

    <string name="try_again">Try Again</string>

    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="sign_in">SIGN IN</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="time_format">%1$d:%2$d</string>

    <string name="internet_unavailable">Internet Unavailable</string>
    <string name="error_message_internet">Internet is required to sign in.\n
        Please make sure you have an active internet connection and try again!</string>

    <string name="retry">RETRY</string>
    <string name="exit">EXIT</string>

    <string name="menu_coming_soon">Menu is currently unavailable!\n
        Please check back later!</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="price_holder">₹ %1$.2f</string>

    <string name="enter_number">Enter Phone Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="isd_code">+91 - </string>
    <string name="invalid_number">Invalid Phone Number</string>
    <string name="check_phone">Check your phone number</string>
    <string name="verifying_notice" formatted="true">We will be verifying the phone number
        &lt;br>&lt;br>
        &lt;i>%1$s&lt;/i>
        &lt;br>&lt;br>
        Is this OK, or would you like to edit the number?
        &lt;br>&lt;br>
        (Note: Carrier SMS charges may apply)
    </string>
    <string name="ok">OK</string>
    <string name="edit">EDIT</string>
    <string name="try_again_no_verify">Couldn\'t verify, please try again!</string>
    <string name="sign_in_successful">Sign in successful!</string>
    <string name="wrong_otp">Wrong OTP</string>
    <string name="name_empty">The name field cannot be empty.</string>
    <string name="error_updating_details">Error updating details. Please try again!</string>

    <string name="enter_name">Enter Name (Eg. John Doe)</string>
    <string name="block">Block</string>
    <string-array name="blocks">

        <item>G1</item>
        <item>G2</item>
        <item>G3</item>
        <item>G4</item>
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>B4</item>
        <item>B5</item>
        <item>B6</item>
        <item>B7</item>

    </string-array>

    <string name="order_details">Order Details</string>
    <string name="empty_cart">Cart is empty!\n\nTry adding items to the cart.</string>
    <string name="number_of_item" formatted="true">%1$d Item</string>
    <string name="number_of_items" formatted="true">%1$d Items</string>
    <string name="order_number" formatted="true">Order #%1$d</string>
    <string name="checkout">Checkout</string>
    <string name="confirm_block">Confirm Block</string>
    <string name="online_payment">Online Payment</string>
    <string name="cod">Cash On Delivery</string>
    <string name="total_cost">Total Cost</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_message">Your order was successfully placed
    &lt;br>&lt;br>
    Please keep ready &lt;i>₹ %1$.2f&lt;/i></string>
    <string name="max_cart_value_display_text">99+</string>
    <string name="back_to_menu">Take me to the menu!</string>

    <!-- Keys -->
    <string name="pNum" translatable="false">phoneNumber</string>

    <!-- Content Descriptors-->
    <string name="background_image">Background image</string>
    <string name="arrow_next">Next arrow</string>
    <string name="tick_icon">Tick icon</string>
    <string name="cart_icon">Cart icon</string>

</resources>
