<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"/>

        <ListView
            android:id="@+id/item_list"
            android:dividerHeight="2dp"
            android:drawSelectorOnTop="true"
            android:divider="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/item_error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_fetching_restaurants"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/try_again_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:text="@string/try_again"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/no_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:textSize="18sp"
        android:text="@string/menu_coming_soon"/>

</RelativeLayout>