<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".CheckoutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_cart"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/order_number_tv"
        android:layout_below="@id/toolbar_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        tools:ignore="HardcodedText"
        android:text="Order Number Here"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/item_count_tv"
        android:layout_below="@id/order_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:textColor = "@color/textHintColor"
        tools:ignore="HardcodedText"
        android:text="Number of Items"/>

    <ListView
        android:id="@+id/list_checkout"
        android:layout_width="match_parent"
        android:layout_below="@id/item_count_tv"
        android:layout_above="@id/separator"
        android:dividerHeight="3dp"
        android:divider="@android:color/transparent"
        android:layout_height="0dp"/>

    <View
        android:id="@+id/separator"
        android:layout_above="@id/total_cost_holder"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/total_cost_holder"
        android:layout_above="@id/confirm_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:elevation="5dp"
        android:padding="5dp"
        android:clipToPadding="false"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:text="@string/total_cost"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/total_cost_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText"
            android:text = "Price in Rs."
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:gravity="end"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/payment_options"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_block"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_margin="10dp"/>

        <Spinner
            android:id="@+id/block_spinner"
            android:layout_width="wrap_content"
            android:theme="@style/Spinner"
            android:spinnerMode="dropdown"
            android:minWidth="50dp"
            android:dropDownWidth="100dp"
            android:layout_gravity="start|center"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:backgroundTint="@color/colorAccentLight"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/payment_options"
        android:layout_above="@id/order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <RadioButton
            android:id="@+id/cod_rbt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/cod"
            android:gravity="center"
            android:checked="true"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"/>

        <RadioButton
            android:id="@+id/op_rbt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:buttonTint="@color/textHintColor"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/online_payment"/>

    </RadioGroup>

    <Button
        android:id="@+id/order_button"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/checkout"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="5dp"/>

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="visible"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_cart"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/back_to_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_marginTop="16dp"
            android:text="@string/back_to_menu"
            android:textColor="@color/colorAccent"
            android:enabled="true"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>